# twit-rs

./: Cargo.toml  README.md
examples/: v1_apponly.rs
src/: lib.rs
src/auth/: mod.rs  oauth1a.rs  oauth2.rs
src/auth/oauth1a/: client.rs  mod.rs  utils.rs
src/auth/xauth/: mod.rs
src/clients/: http.rs  mod.rs  traits.rs  v1.rs
src/clients/v1/: search.rs
src/models/v1/: mod.rs  search_tweets.rs
twit/: Cargo.toml
twit-macros/: Cargo.toml
twit-macros/src/: lib.rs
twit/examples/: v1_apponly.rs
twit/src/: lib.rs
twit/src/auth/oauth1a/: utils.rs
twit/src/auth/oauth2/: client.rs  mod.rs
twit/src/models/v1/: mod.rs  search.rs
