[package]
name = "twit"
version = "0.0.0"
edition = "2021"
description = "sample crate"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
